blurry image fixes

--- a/static/speak-neuron.css
+++ b/static/speak-neuron.css
@@ -6,14 +6,6 @@ a.anchor{
     top: -100px;
     visibility: hidden;
 }
-/* hopefully avoids blurry images */
-img {
-    image-rendering: -moz-crisp-edges;
-    image-rendering:   -o-crisp-edges;         /* Opera */
-    image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
-    image-rendering: crisp-edges;
-    -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
-}
 
 sup {
     vertical-align: baseline;
@@ -65,6 +57,9 @@ h1 a {
     border-bottom: 1px dotted;
 }
 
+h2, h3, h4, h5 {
+    font-weight: normal; 
+}
 h1, h2, h3, h4, h5, ul, ol, #ch-list, .ed-note {
     font-family: 'Inconsolata';
 }
@@ -265,6 +260,13 @@ body img {
 }
 #im-11, #im-12, #im-16, #im-18 {
     height: 400px;
+}
+
+/* hopefully avoids blurry images in firefox */
+#im-5, #im-18 {
+    transform: rotate( .0001deg );
+    -ms-transform:rotate(.0001deg); /* IE 9 */
+    -webkit-transform:rotate(.0001deg); /* Opera, Chrome, and Safari */
 }
 
 .unselectable {
